<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/regionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin_top"
        android:gravity="center"
        android:text="@string/region"
        android:textSize="@dimen/big_text_size" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin_top"
        android:gravity="center"
        android:text="@string/country"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin_top"
        android:gravity="center"
        android:text="@string/start_temp"
        android:textSize="@dimen/big_text_size" />

    <TextView
        android:id="@+id/conditionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin_top"
        android:gravity="center"
        android:text="@string/condition"
        android:textSize="@dimen/small_text_size" />

</LinearLayout>